--- a/navigation.css
+++ b/navigation.css
@@ -175,7 +175,7 @@ body {
 
 /* СТИЛЬ 1: fancy-scroll - Градиентный с анимацией */
 .sidebar.fancy-scroll::-webkit-scrollbar {
-    width: 10px;
+    width: 10px; !important;
 }
 
 .sidebar.fancy-scroll::-webkit-scrollbar-track {
